# fitness-tracker

./: .env-example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
authentication/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_workout_plans.py  0003_alter_user_options_remove_user_username.py  0004_alter_user_managers.py
authentication/templates/: login.html  profile.html  profile_edit.html  profile_password.html  register.html
config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css
templates/: base.html  index.html
templates/authentication/: login.html  profile.html  profile_edit.html  register.html
templates/tracker/: dashboard.html  workoutplan_create.html  workoutsession_start.html
tracker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_remove_user_model.py  0003_alter_weighttracker_user_alter_workoutplan_creator_and_more.py
tracker/repository/: abstract_repository.py  base.py  base_repository.py  session.py  session_repository.py  session_repository_factory.py  session_repository_interface.py  weight_tracker.py
tracker/schemas/: exercise_schema.py  exercise_set_schema.py  weight_tracker.py  workout_plan_schema.py  workout_session_schema.py
tracker/service/: error_handlers.py  exceptions.py  exercise.py  exercise_set.py  session.py  session_factory.py  session_service.py  weight_tracker.py  workout_plan.py
(+19 files in other folders)
