[project]
name = "fitness-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Django==5.2.5",
    "psycopg2-binary",
    "python-dotenv>=1.0.1",
    "gunicorn==23.0.0",
    "whitenoise==6.5.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "pypackages",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 130
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "A", "PL", "I", "RUF", "FIX"]
ignore = [
    "A004", "A005", "E712", "ANN204", "PLW2901", "PLR0913", "A001", "A002",
    "B904", "UP007", "UP006", "UP035", "ANN201", "RUF010", "RUF012",
    "PLR0911", "B013", "B024", "PLR1714", "PLR0912", "B007", "PLR0915", "FIX002",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
relative-imports-order = "closest-to-furthest"
length-sort = false
case-sensitive = true
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["ALL"]
"manage.py" = ["PLC0415"]
